--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@ We determined that all loggers and log readers work on the same file causing per
 		</tr>
 	</tbody>
 </table>
+	<p><small>Request times in seconds</small></p>
 	</section>
 	<section>
 	<p class="skyblue">Test run with experimental logging utility</p>
