remove graphing portion

--- a/index.html
+++ b/index.html
@@ -324,9 +324,8 @@ class MyLocust(HttpLocust):
 				<h4>Azure Notebooks</h4>
 				<img src="images/notebook.png" alt="Azure Python Notebook">
 				</section>
-				<section>
-					<h4>Graphing Data in our Notebook</h4>
                 <section>
+                	<h4>Graphing Our Results</h4>
                 	<img style="background-color:white;" src="images/response_times.png" alt="Response Time Results with a large distribution">
                 </section>
 			</section>
