fix wording about js headless browser

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<section>
 						<h4>CasperJS/PhantomJS</h4>
 						<span class="fragment">
-						<p>JavaScript Headless Browser</p>
+						<p>Headless Browser with JavaScript API</p>
 						<img alt="PhantomJS Logo" style="margin-bottom:150px;" data-src="images/phantomjs-logo.png"> <img alt="PhantomJS Logo" data-src="images/casperjs-logo.png">	
 						</span>
 						
